Fixing layout issues

--- a/src/main/javascript/PersonalApiTokens/MyApiTokens/MyApiTokens.scss
+++ b/src/main/javascript/PersonalApiTokens/MyApiTokens/MyApiTokens.scss
@@ -27,8 +27,10 @@
 
 .content {
     display: flex;
-    flex: 1;
-    padding: var(--spacing-medium) var(--spacing-large) var(--spacing-medium) var(--spacing-large);
+    flex: 1 1 0;
+    min-height: 0;
+
+    padding: var(--spacing-medium);
 
     background-color: var(--color-gray_light40);
 }
