--- a/src/main/javascript/PersonalApiTokens/TokensList/TokensList.scss
+++ b/src/main/javascript/PersonalApiTokens/TokensList/TokensList.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
+    width: 100%;
 
     background-color: #fdfdfd;
     box-shadow: 0 4px 8px rgba(19, 28, 33, 0.2);
@@ -16,6 +17,7 @@
     display: flex;
     flex: 1;
     flex-direction: column;
+    width: 100%;
 
     background-color: #fdfdfd;
     box-shadow: 0 4px 8px rgba(19, 28, 33, 0.2);
